@@ -1,0 +1,24 @@
+;; This buffer is for text that is not saved, and for Lisp evaluation.
+;; To create a file, visit it with C-x C-f and enter text in its buffer.
+
+Passed Report Tests
+-------------------
+Added Programs
+Affidavit Contacts
+Missing Affidavit Data Contacts
+Missing Affidavit Submissions
+All Affiliates
+All Affiliate Contacts
+Affiliate Activity
+Affiliates by Daypart
+Affiliates by Network
+Affiliates by Program
+Affiliates by Program/DMA Market
+Affiliates by Program/MSA Market
+Affiliates/Admin Contacts by Program
+Arbitron
+Deleted Programs
+Programs by City/State
+Programs by DMA Market
+Programs by MSA Market
+RadioAmerica Affiliate
