@@ -1,0 +1,64 @@
+/* XPM */
+static const char * network_xpm[] = {
+"16 16 45 1",
+" 	c None",
+".	c #3D6CA7",
+"+	c #6B6D68",
+"@	c #696C68",
+"#	c #7B7C77",
+"$	c #F9F9F9",
+"%	c #BFC1BF",
+"&	c #6C6E67",
+"*	c #7B7C76",
+"=	c #C3C6C3",
+"-	c #B4B6B4",
+";	c #6F726A",
+">	c #5D605B",
+",	c #626460",
+"'	c #5F615D",
+")	c #A4A5A3",
+"!	c #838682",
+"~	c #D5D7D5",
+"{	c #B0B3B0",
+"]	c #6F716D",
+"^	c #D6D9D6",
+"/	c #BEC2BE",
+"(	c #5D605C",
+"_	c #A2A4A2",
+":	c #D5D8D5",
+"<	c #C2C6C1",
+"[	c #828481",
+"}	c #ADAFAC",
+"|	c #D5D9D4",
+"1	c #C4C9C4",
+"2	c #919490",
+"3	c #5F625E",
+"4	c #CACCC9",
+"5	c #9A9D99",
+"6	c #929692",
+"7	c #ABAFAA",
+"8	c #5A5D58",
+"9	c #616460",
+"0	c #B7BAB7",
+"a	c #999D99",
+"b	c #5C5F5B",
+"c	c #71736F",
+"d	c #545752",
+"e	c #555852",
+"f	c #646763",
+"                ",
+"                ",
+" . .   +@   . . ",
+" . .. #$%& .. . ",
+" . .. *=-; .. . ",
+" . .   >>   . . ",
+"       ,'       ",
+"       )!       ",
+"       ~{       ",
+"      ]^/(      ",
+"      _:<[      ",
+"      }|12      ",
+"     345678     ",
+"     90  ab     ",
+"     cd  ef     ",
+"                "};
