@@ -1,0 +1,26 @@
+/* XPM */
+const static char *program_xpm[]={
+"16 16 7 1",
+". c None",
+"# c #000000",
+"e c #404000",
+"b c #585858",
+"d c #808080",
+"c c #c3c3c3",
+"a c #ffffff",
+".....#####......",
+"...##aaaaa##....",
+"..#aaabbbaaa#...",
+".#aaaabbbaaaa#..",
+".#aaaacbcaaaa#..",
+"#aaaaaabaaaaaa#.",
+"#abbcad#dacbba#.",
+"#abbbb###bbbba#.",
+"#abbccd#dacbba#.",
+"#aaaaaabaaaaaa#.",
+".#aaaacbcaaaa#..",
+".#aaaabbbaaaa#..",
+"..#aaabbbaaa#...",
+"...##aaaaa##....",
+".....#####eeeee.",
+"..............ee"};
