@@ -1,0 +1,24 @@
+/* XPM */
+const static char *provider_xpm[]={
+"16 16 5 1",
+". c None",
+"# c #000000",
+"b c #ff0000",
+"c c #ffc0c0",
+"a c #ffffff",
+".....#####......",
+"...##aaaaa##....",
+"..#aaaaaaaaa#...",
+".#aaabbbbbcaa#..",
+".#aaabbccbbaa#..",
+"#aaaabbaabbaaa#.",
+"#aaaabbccbbaaa#.",
+"#aaaabbbbbcaaa#.",
+"#aaaabbaaaaaaa#.",
+"#aaaabbaaaaaaa#.",
+".#aaabbaaaaaa#..",
+".#aaabbaaaaaa#..",
+"..#aaaaaaaaa#...",
+"...##aaaaa##....",
+".....#####......",
+"................"};
